--- a/src/pages/blogs/avoid-email-scams.mdx
+++ b/src/pages/blogs/avoid-email-scams.mdx
@@ -1,3 +1,9 @@
+---
+title: "Avoid Email Scams"
+date: "2023-11-14"
+featuredImage: "../../images/illustrations/inbox-money.png"
+---
+
 import { Link } from 'gatsby'
 import inboxMoney from '../../images/illustrations/inbox-money.png'
 import {Wrapper} from "../../components/Markdown-Wrapper"
