--- a/src/pages/blogs/boost-email-responses.mdx
+++ b/src/pages/blogs/boost-email-responses.mdx
@@ -1,3 +1,9 @@
+---
+title: "Boost Email Responses"
+date: "2023-11-14"
+featuredImage: "../../images/illustrations/inbox-money.png"
+---
+
 import { Link } from 'gatsby'
 import angrySticks from '../../images/blog/stick-angry.jpg'
 import happySticks from '../../images/blog/stick-happy-line-go-up.jpg'
@@ -6,7 +12,7 @@ import signStick from '../../images/blog/sticks-empty.jpg'
 import {Wrapper} from "../../components/Markdown-Wrapper";
 
 <Wrapper>
-  How to increase email response rates
+  # How to increase email response rates
 
   Every minute there are over 15.2 million texts sent and 210 emails sent. On top of that, email users are expected to reach 4.3 billion in 2025. With the persistent rise in digital communications, it's becoming increasingly difficult to cut through the noise. Both marketers and salespeople are finding new and ingenious ways to stand out from the crowd in order to get responses from prospective customers.
 
