--- a/src/pages/blogs/future-rewards-technology.mdx
+++ b/src/pages/blogs/future-rewards-technology.mdx
@@ -1,3 +1,9 @@
+---
+title: "Future Rewards Technology"
+date: "2023-11-14"
+featuredImage: "../../images/illustrations/inbox-money.png"
+---
+
 import { Link } from 'gatsby'
 import angrySticks from '../../images/blog/stick-angry.jpg'
 import happySticks from '../../images/blog/stick-happy-line-go-up.jpg'
@@ -10,7 +16,7 @@ import Footer from "../../components/footer";
 
 <Header/>
 <Wrapper>
-  The Future of Interactive Rewards and How Technology Is Changing the Game
+  # The Future of Interactive Rewards and How Technology Is Changing the Game
 
   Interactive rewards enhance your sales & marketing strategies. Used correctly, they can become response generation tools to expand your customer base, foster customer loyalty and increase sales. This is now being boosted by technology in an extraordinary way.
 
