--- a/src/pages/blogs/gamify-rewards-program.mdx
+++ b/src/pages/blogs/gamify-rewards-program.mdx
@@ -1,3 +1,9 @@
+---
+title: "Gamify Rewards Program"
+date: "2023-11-14"
+featuredImage: "../../images/illustrations/inbox-money.png"
+---
+
 import { Link } from 'gatsby'
 import angrySticks from '../../images/blog/stick-angry.jpg'
 import happySticks from '../../images/blog/stick-happy-line-go-up.jpg'
@@ -7,7 +13,7 @@ import attentionSocial from '../../images/blog/attention-economy-social-media.jp
 import {Wrapper} from "../../components/Markdown-Wrapper";
 
 <Wrapper>
-  Rewards Gamification
+  # Rewards Gamification
 
   In recent years, gamification has become a popular trend in the world of incentive rewards. But what exactly is gamification, and how can it be used to drive engagement and motivation in rewards programs?
 
@@ -25,7 +31,7 @@ import {Wrapper} from "../../components/Markdown-Wrapper";
 
   Gamification can be a powerful tool in incentive rewards programs, as long as it is used authentically and in a balanced and fair manner. By incorporating game-based elements in a meaningful way, organizations can drive engagement and motivation, leading to improved performance and loyalty.
 
-  FynCom & Rewards Gamification
+  ## FynCom & Rewards Gamification
 
   Want to increase engagement with your customers? FynCom's incentive-based interactive rewards can be built into any part of your sales funnel on multiple platforms to incentivize customer behavior.
 </Wrapper>
