--- a/src/pages/blogs/interactive-rewards-tips.mdx
+++ b/src/pages/blogs/interactive-rewards-tips.mdx
@@ -1,3 +1,9 @@
+---
+title: "Interactive Rewards Tips"
+date: "2023-11-14"
+featuredImage: "../../images/illustrations/inbox-money.png"
+---
+
 import { Link } from 'gatsby'
 import angrySticks from '../../images/blog/stick-angry.jpg'
 import happySticks from '../../images/blog/stick-happy-line-go-up.jpg'
@@ -7,7 +13,7 @@ import attentionSocial from '../../images/blog/attention-economy-social-media.jp
 import {Wrapper} from "../../components/Markdown-Wrapper";
 
 <Wrapper>
-  Tips for designing and implementing effective interactive rewards program
+  # Tips for designing and implementing effective interactive rewards program
 
   Congratulations! You've decided to make a commitment to utilise an incentive rewards program to motivate your customers. Now what's next? Here's some tips on how to create and implement an effective incentive rewards program.
 
