--- a/src/pages/blogs/marketing-roi-gifting.mdx
+++ b/src/pages/blogs/marketing-roi-gifting.mdx
@@ -1,3 +1,9 @@
+---
+title: "Marketing Roi Gifting"
+date: "2023-11-14"
+featuredImage: "../../images/illustrations/inbox-money.png"
+---
+
 import { Link } from 'gatsby'
 import angrySticks from '../../images/blog/stick-angry.jpg'
 import happySticks from '../../images/blog/stick-happy-line-go-up.jpg'
@@ -7,7 +13,7 @@ import attentionSocial from '../../images/blog/attention-economy-social-media.jp
 import {Wrapper} from "../../components/Markdown-Wrapper";
 
 <Wrapper>
-  How To Track Marketing ROI with Gifting
+  # How To Track Marketing ROI with Gifting
 
   Historically, tracking ROI on marketing campaigns has always been tricky. It's difficult to tell when customers are seeing different campaigns and acting upon them. If we don't know which campaign contributed to the purchase, we can't attribute the revenue to any single campaign. On top of that, not all campaigns are directly related to sales, the purpose of certain campaigns may be exposure or education. With differing campaign purposes, it gets increasingly complex to track "success". By reallocating budget to rewards along the different customer touch points, we can more easily track the ROI of achieving targeted behavior with each campaign and can even reduce customer acquisition cost.
 
