--- a/src/pages/blogs/optimize-rewards-analytics.mdx
+++ b/src/pages/blogs/optimize-rewards-analytics.mdx
@@ -1,3 +1,9 @@
+---
+title: "Optimize Rewards Analytics"
+date: "2023-11-14"
+featuredImage: "../../images/illustrations/inbox-money.png"
+---
+
 import { Link } from 'gatsby'
 import angrySticks from '../../images/blog/stick-angry.jpg'
 import happySticks from '../../images/blog/stick-happy-line-go-up.jpg'
@@ -7,7 +13,7 @@ import attentionSocial from '../../images/blog/attention-economy-social-media.jp
 import {Wrapper} from "../../components/Markdown-Wrapper";
 
 <Wrapper>
-  How data and analytics can optimize incentive rewards programs
+  # How data and analytics can optimize incentive rewards programs
 
   _ **Maximizing results:** _ _Learn how to improve your incentive rewards programs with the power of data and analytics to optimize your strategy and drive growth for your business._
 
