--- a/src/pages/blogs/response-generation.mdx
+++ b/src/pages/blogs/response-generation.mdx
@@ -1,3 +1,9 @@
+---
+title: "Response Generation"
+date: "2023-11-14"
+featuredImage: "../../images/illustrations/inbox-money.png"
+---
+
 import { Link } from 'gatsby'
 import angrySticks from '../../images/blog/stick-angry.jpg'
 import happySticks from '../../images/blog/stick-happy-line-go-up.jpg'
@@ -7,7 +13,7 @@ import attentionSocial from '../../images/blog/attention-economy-social-media.jp
 import {Wrapper} from "../../components/Markdown-Wrapper";
 
 <Wrapper>
-  Damn, it feels good to be a Response-Getta
+  # Damn, it feels good to be a Response-Getta
 
   ![](RackMultipart20231114-1-5hmkso_html_68ef0c1c6a7e0c15.gif)
 
