--- a/src/pages/blogs/response-rate-improvement.mdx
+++ b/src/pages/blogs/response-rate-improvement.mdx
@@ -1,3 +1,9 @@
+---
+title: "Response Rate Improvement"
+date: "2023-11-14"
+featuredImage: "../../images/illustrations/inbox-money.png"
+---
+
 import { Link } from 'gatsby'
 import angrySticks from '../../images/blog/stick-angry.jpg'
 import happySticks from '../../images/blog/stick-happy-line-go-up.jpg'
@@ -7,7 +13,7 @@ import attentionSocial from '../../images/blog/attention-economy-social-media.jp
 import {Wrapper} from "../../components/Markdown-Wrapper";
 
 <Wrapper>
-  Mining for Response vs. Mining for Bitcoin
+  # Mining for Response vs. Mining for Bitcoin
 
   You've heard of "Mining Bitcoin", but have you heard of "Mining Responses" or "Mining Attention"?
 
