--- a/src/pages/blogs/zero-party-data-guide.mdx
+++ b/src/pages/blogs/zero-party-data-guide.mdx
@@ -1,3 +1,9 @@
+---
+title: "Zero Party Data Guide"
+date: "2023-11-14"
+featuredImage: "../../images/illustrations/inbox-money.png"
+---
+
 import { Link } from 'gatsby'
 import angrySticks from '../../images/blog/stick-angry.jpg'
 import happySticks from '../../images/blog/stick-happy-line-go-up.jpg'
@@ -7,11 +13,11 @@ import attentionSocial from '../../images/blog/attention-economy-social-media.jp
 import {Wrapper} from "../../components/Markdown-Wrapper";
 
 <Wrapper>
-  Zero Party Data
+  # Zero Party Data
 
   ![](RackMultipart20231114-1-nor0vp_html_fb1a618efa259165.png)
 
-  # **What is Zero Party Data?**
+  ## **What is Zero Party Data?**
 
   Zero Party Data is characterized by two key components. Firstly, it is data that is acquired consensually and with permission from the customer. Secondly, the data collected can be tied to a customer profile (or first party data). Without this second component, the data is less valuable as it cannot be used to personalize products to any one customer. Zero Party Data is acquired through voluntary customer activity which can take the form of quizzes or polls, website activity, messages with customers, or customer profile updates.
 
