--- a/src/pages/blogs/user-feedback-strategies.mdx
+++ b/src/pages/blogs/user-feedback-strategies.mdx
@@ -1,3 +1,9 @@
+---
+title: "User Feedback Strategies"
+date: "2023-11-14"
+featuredImage: "../../images/illustrations/inbox-money.png"
+---
+
 import { Link } from 'gatsby'
 import angrySticks from '../../images/blog/stick-angry.jpg'
 import happySticks from '../../images/blog/stick-happy-line-go-up.jpg'
