blog wrapper working now

--- a/src/pages/blog/customer-survey-incentives.mdx
+++ b/src/pages/blog/customer-survey-incentives.mdx
@@ -2,6 +2,7 @@
 title: "Customer Survey Incentives"
 date: "2023-11-14"
 featuredImage: "../../images/illustrations/inbox-money.png"
+description: "Learn how businesses can incentivize customer surveys to gather valuable feedback."
 ---
 
 import { Link } from 'gatsby'
