manual seo setting

--- a/src/pages/blog/customer-survey-incentives.mdx
+++ b/src/pages/blog/customer-survey-incentives.mdx
@@ -12,7 +12,12 @@ import iDontCareStick from '../../images/blog/stick-done-with-it.jpg'
 import signStick from '../../images/blog/sticks-empty.jpg'
 import {Wrapper} from "../../components/Markdown-Wrapper";
 
-<Wrapper>
+export const meta = {
+  title: "Customer Survey Incentives",
+  description: "Learn how businesses can incentivize customer surveys to gather valuable feedback."
+};
+
+<Wrapper seo={meta}>
 # How Businesses Can Incentivize Customers to Actually Take Surveys
 
 Surveys are an excellent resource for effective customer feedback, and it's never been easier for businesses to share them with customers. It is, however, pretty difficult to get customers to respond to surveys. Just how difficult?
