--- a/src/pages/blog/boost-email-responses.mdx
+++ b/src/pages/blog/boost-email-responses.mdx
@@ -13,7 +13,7 @@ import signStick from '../../images/blog/sticks-empty.jpg'
 import {Wrapper} from "../../components/Markdown-Wrapper";
 
 export const meta = {
-title: "Elevate Your Email Game: Proven Techniques to Skyrocket Response Rates"
+title: "Elevate Your Email Game: Proven Techniques to Skyrocket Response Rates",
 description: "Unlock the secrets to dramatically improving email response rates with targeted strategies. Learn how to refine your delivery, open rates, and engagement for better communication outcomes."
 };
 
