--- a/src/pages/blog/customer-survey-incentives.mdx
+++ b/src/pages/blog/customer-survey-incentives.mdx
@@ -13,7 +13,7 @@ import signStick from '../../images/blog/sticks-empty.jpg'
 import {Wrapper} from "../../components/Markdown-Wrapper";
 
 export const meta = {
-title: "Driving Survey Participation: Smart Incentivization Techniques"
+title: "Driving Survey Participation: Smart Incentivization Techniques",
 description: "Revolutionize your approach to customer surveys with strategic incentives. Boost participation rates and gather insightful feedback while forging stronger customer relationships."
 };
 
