--- a/src/pages/blog/effective-use-cases.mdx
+++ b/src/pages/blog/effective-use-cases.mdx
@@ -1,25 +1,27 @@
 ---
-title: "Effective Use Cases"
-date: "2023-11-14"
-featuredImage: "../../images/illustrations/inbox-money.png"
+title: "Incentivizing Engagement: The FynCom and Nano Foundation Success Story"
+date: "2022-12-06"
+featuredImage: "../../images/blog/fyncom-nano-foundation-short.png"
+description: "Discover how the Nano Foundation leveraged FynCom's innovative rewards technology to skyrocket translation activity for their multilingual blog, fostering global engagement and enhancing user retention."
 ---
 
 import { Link } from 'gatsby'
-import angrySticks from '../../images/blog/stick-angry.jpg'
-import happySticks from '../../images/blog/stick-happy-line-go-up.jpg'
-import iDontCareStick from '../../images/blog/stick-done-with-it.jpg'
-import attentionEconomy from "../../images/blog/the-attention-economy-60-seconds.png"
-import attentionSocial from '../../images/blog/attention-economy-social-media.jpg'
+import nanoHero from '../../images/blog/fyncon-nano-foundation.png'
 import {Wrapper} from "../../components/Markdown-Wrapper";
 
-<Wrapper>
-  Use Case: How Nano Foundation uses FynCom to increase engagement with a wider audience
+export const meta = {
+title: "Incentivizing Engagement: The FynCom and Nano Foundation Success Story",
+  description: "Discover how the Nano Foundation leveraged FynCom's innovative rewards technology to skyrocket translation activity for their multilingual blog, fostering global engagement and enhancing user retention."
+};
 
-  # **Incentive Theory of Motivation**
+<Wrapper seo={meta}>
+
+  # Use Case: How Nano Foundation uses FynCom to increase engagement with a wider audience
+
 
   The incentive theory of motivation suggests that people are motivated by incentives and reinforcements. It also proposes that people will behave in certain ways to gain rewards and avoid punishments. However, it's not as simple as it seems as people view similar incentives differently and these incentives will only work if people perceive them to be personally valuable.
 
-  ![](RackMultipart20231114-1-99lrh8_html_1cfe21281125bbdc.png)
+  <img src={nanoHero} alt="The Nano Foundation's success story" />
 
   ## **Reaching large audiences and translating simultaneously**
 
@@ -35,9 +37,10 @@ import {Wrapper} from "../../components/Markdown-Wrapper";
 
   If you're a fluent speaker of French, Spanish, Portuguese, German, Dutch, Nigerian Pidgin, Norwegian, Polish, or Indonesian and would like to try out FynCom's instant rewards tech yourself, sign up is simple:
 
-  1. Create a[CrowdIn](https://crowdin.com/)account
-  2. Go to the[FynCom portal](https://app.fyncom.com/settings)and[input your Crowdin username](https://www.fyncom.com/crowdin-rewards-for-translations-user-setup)
-  3. Visit the[Nano blog](https://nano.crowdin.com/nano-blog)and start translating
+
+  1. Create a {" "}[CrowdIn](https://crowdin.com/){" "}account
+  2. Go to the{" "}[FynCom portal](https://app.fyncom.com/settings) and {" "}<Link to="/user-help-center/crowdin-rewards-for-user-translations-setup">input your Crowdin username</Link>.
+  3. Visit the [Nano blog](https://nano.crowdin.com/nano-blog)and start translating
 
   The blogs which have FynCom's incentivized rewards attached are
 
