--- a/src/pages/blog/interactive-rewards-tips.mdx
+++ b/src/pages/blog/interactive-rewards-tips.mdx
@@ -12,7 +12,12 @@ import attentionEconomy from "../../images/blog/the-attention-economy-60-seconds
 import attentionSocial from '../../images/blog/attention-economy-social-media.jpg'
 import {Wrapper} from "../../components/Markdown-Wrapper";
 
-<Wrapper>
+export const meta = {
+title: "Mastering the Attention Economy: Effective Strategies for Business Growth",
+description: "Explore the evolution of the attention economy and uncover cutting-edge strategies to capture consumer interest, drive engagement, and boost your bottom line in the digital landscape."
+};
+
+<Wrapper seo={meta}>
   # Tips for designing and implementing effective interactive rewards program
 
   Congratulations! You've decided to make a commitment to utilise an incentive rewards program to motivate your customers. Now what's next? Here's some tips on how to create and implement an effective incentive rewards program.
