--- a/src/pages/blog/response-economy-strategies.mdx
+++ b/src/pages/blog/response-economy-strategies.mdx
@@ -12,7 +12,12 @@ import attentionEconomy from "../../images/blog/the-attention-economy-60-seconds
 import attentionSocial from '../../images/blog/attention-economy-social-media.jpg'
 import {Wrapper} from "../../components/Markdown-Wrapper";
 
-<Wrapper>
+export const meta = {
+title: "Mastering the Attention Economy: Effective Strategies for Business Growth",
+description: "Explore the evolution of the attention economy and uncover cutting-edge strategies to capture consumer interest, drive engagement, and boost your bottom line in the digital landscape."
+};
+
+<Wrapper seo={meta}>
   # The Response Economy: What it is and How to Profit from it
 
   In a response economy, getting people's attention is everything. If you knew exactly how much it costs to get a response from your target audience over emails, texts, phone calls or other channels, how would that affect your outreach strategy? Whether your business is trying to sell a product, service or just get brand engagement from people, knowing the average cost per response (aCPR) puts you ahead of the competition. Right now, you can go to FynCom's front page to see live data of the aCPR over emails. What determines that rate? How can you make the most of this new economy of quick business responses?
