--- a/src/pages/blog/response-generation.mdx
+++ b/src/pages/blog/response-generation.mdx
@@ -1,21 +1,27 @@
 ---
-title: "Response Generation"
-date: "2023-11-14"
-featuredImage: "../../images/illustrations/inbox-money.png"
+title: "Boosting Response Rates: Unleashing the Power of Automated Rewards"
+date: "2022-11-29"
+featuredImage: "../../images/blog/feels-good-to-get-responses.gif"
+description: "Maximize customer engagement and drive success in your outreach campaigns with FynCom's Rewards Technology. Learn how automated rewards can triple your response rates and increase customer interaction affordably."
+topics: "Market Research, Response Economy"
 ---
 
-import { Link } from 'gatsby'
-import angrySticks from '../../images/blog/stick-angry.jpg'
-import happySticks from '../../images/blog/stick-happy-line-go-up.jpg'
-import iDontCareStick from '../../images/blog/stick-done-with-it.jpg'
-import attentionEconomy from "../../images/blog/the-attention-economy-60-seconds.png"
-import attentionSocial from '../../images/blog/attention-economy-social-media.jpg'
+import gettingResponses from '../../images/blog/feels-good-to-get-responses.gif'
+import linkedInSurvey from '../../images/blog/statistics-linked-in-survey.png'
 import {Wrapper} from "../../components/Markdown-Wrapper";
 
-<Wrapper>
+[//]: # (Using automation outreach tools can be a double-edged sword. Read here to see 1 example of LinkedIn automation for getting survey responses.)
+
+export const meta = {
+title: "Boosting Response Rates: Unleashing the Power of Automated Rewards",
+  description: "Maximize customer engagement and drive success in your outreach campaigns with FynCom's Rewards Technology. Learn how automated rewards can triple your response rates and increase customer interaction affordably."
+};
+
+<Wrapper seo={meta}>
+
   # Damn, it feels good to be a Response-Getta
 
-  ![](RackMultipart20231114-1-5hmkso_html_68ef0c1c6a7e0c15.gif)
+  <img src={gettingResponses} alt="Revenue operations team planning their next move" />
 
   Revenue operations team planning their next move
 
@@ -29,7 +35,9 @@ import {Wrapper} from "../../components/Markdown-Wrapper";
 
   ## **Getting responses is the ultimate revenue driver**
 
-  ![](RackMultipart20231114-1-5hmkso_html_5a773690be660d73.png)
+  [//]: # (put in side by side component)
+
+  <img src={linkedInSurvey} alt="Product marketers want responses!" />
 
   Product marketers want responses!
 
@@ -45,7 +53,7 @@ import {Wrapper} from "../../components/Markdown-Wrapper";
 
   That's exactly why FynCom's Rewards Technology was created. If you want to book more meetings, get more responses, and increase your customer engagement... Come set up a meeting with me at the button below!
 
-  [Book a Meeting (and Get Rewarded Instantly!)](https://calendly.com/adrian-fyncom/15min)
+  [Book a Meeting (and Get Rewarded Instantly!)](https://calendly.com/adrian-fyncom/30min)
 
   #### **Quote of the Day**
 
