--- a/src/pages/blog/attention-economy-insights.mdx
+++ b/src/pages/blog/attention-economy-insights.mdx
@@ -14,7 +14,7 @@ import attentionSocial from '../../images/blog/attention-economy-social-media.jp
 import {Wrapper} from "../../components/Markdown-Wrapper";
 
 export const meta = {
-title: "Mastering the Attention Economy: Effective Strategies for Business Growth"
+title: "Mastering the Attention Economy: Effective Strategies for Business Growth",
 description: "Explore the evolution of the attention economy and uncover cutting-edge strategies to capture consumer interest, drive engagement, and boost your bottom line in the digital landscape."
 };
 
