--- a/src/pages/blog/gamify-rewards-program.mdx
+++ b/src/pages/blog/gamify-rewards-program.mdx
@@ -12,7 +12,12 @@ import attentionEconomy from "../../images/blog/the-attention-economy-60-seconds
 import attentionSocial from '../../images/blog/attention-economy-social-media.jpg'
 import {Wrapper} from "../../components/Markdown-Wrapper";
 
-<Wrapper>
+export const meta = {
+title: "Mastering the Attention Economy: Effective Strategies for Business Growth",
+description: "Explore the evolution of the attention economy and uncover cutting-edge strategies to capture consumer interest, drive engagement, and boost your bottom line in the digital landscape."
+};
+
+<Wrapper seo={meta}>
   # Rewards Gamification
 
   In recent years, gamification has become a popular trend in the world of incentive rewards. But what exactly is gamification, and how can it be used to drive engagement and motivation in rewards programs?
