--- a/src/pages/blog/marketing-roi-gifting.mdx
+++ b/src/pages/blog/marketing-roi-gifting.mdx
@@ -12,7 +12,12 @@ import attentionEconomy from "../../images/blog/the-attention-economy-60-seconds
 import attentionSocial from '../../images/blog/attention-economy-social-media.jpg'
 import {Wrapper} from "../../components/Markdown-Wrapper";
 
-<Wrapper>
+export const meta = {
+title: "Mastering the Attention Economy: Effective Strategies for Business Growth",
+description: "Explore the evolution of the attention economy and uncover cutting-edge strategies to capture consumer interest, drive engagement, and boost your bottom line in the digital landscape."
+};
+
+<Wrapper seo={meta}>
   # How To Track Marketing ROI with Gifting
 
   Historically, tracking ROI on marketing campaigns has always been tricky. It's difficult to tell when customers are seeing different campaigns and acting upon them. If we don't know which campaign contributed to the purchase, we can't attribute the revenue to any single campaign. On top of that, not all campaigns are directly related to sales, the purpose of certain campaigns may be exposure or education. With differing campaign purposes, it gets increasingly complex to track "success". By reallocating budget to rewards along the different customer touch points, we can more easily track the ROI of achieving targeted behavior with each campaign and can even reduce customer acquisition cost.
