--- a/src/pages/blog/optimize-rewards-analytics.mdx
+++ b/src/pages/blog/optimize-rewards-analytics.mdx
@@ -12,7 +12,13 @@ import attentionEconomy from "../../images/blog/the-attention-economy-60-seconds
 import attentionSocial from '../../images/blog/attention-economy-social-media.jpg'
 import {Wrapper} from "../../components/Markdown-Wrapper";
 
-<Wrapper>
+export const meta = {
+title: "Mastering the Attention Economy: Effective Strategies for Business Growth",
+description: "Explore the evolution of the attention economy and uncover cutting-edge strategies to capture consumer interest, drive engagement, and boost your bottom line in the digital landscape."
+};
+
+<Wrapper seo={meta}>
+
   # How data and analytics can optimize incentive rewards programs
 
   _ **Maximizing results:** _ _Learn how to improve your incentive rewards programs with the power of data and analytics to optimize your strategy and drive growth for your business._
