--- a/src/pages/blog/response-rate-improvement.mdx
+++ b/src/pages/blog/response-rate-improvement.mdx
@@ -12,7 +12,13 @@ import attentionEconomy from "../../images/blog/the-attention-economy-60-seconds
 import attentionSocial from '../../images/blog/attention-economy-social-media.jpg'
 import {Wrapper} from "../../components/Markdown-Wrapper";
 
-<Wrapper>
+export const meta = {
+title: "Mastering the Attention Economy: Effective Strategies for Business Growth",
+description: "Explore the evolution of the attention economy and uncover cutting-edge strategies to capture consumer interest, drive engagement, and boost your bottom line in the digital landscape."
+};
+
+<Wrapper seo={meta}>
+
   # Mining for Response vs. Mining for Bitcoin
 
   You've heard of "Mining Bitcoin", but have you heard of "Mining Responses" or "Mining Attention"?
